forgot codeclimate repo token...

--- a/.travis.yml
+++ b/.travis.yml
@@ -22,4 +22,4 @@ install:
 script:
   - npm test
 after_script:
-  - codeclimate-test-reporter < lcov.dat
+  - CODECLIMATE_REPO_TOKEN=5d52a9f74dc6c00b8b310bd793c41479d4cbab3750ef73f6ef3556f68853256d codeclimate-test-reporter < lcov.dat
