--- a/bower.json
+++ b/bower.json
@@ -1,18 +1,11 @@
 {
   "name": "deo-personal-website",
   "dependencies": {
-    "ember": "2.3.0",
+    "ember": "~2.3.1",
     "ember-cli-shims": "0.1.0",
     "ember-cli-test-loader": "0.2.2",
-    "ember-load-initializers": "0.1.7",
     "ember-qunit-notifications": "0.1.0",
-    "jquery": "1.11.3",
-    "loader.js": "^3.5.0",
-    "bootstrap": "~3.3.5",
     "bootstrap-sass": "^3.3.6"
-  },
-  "resolutions": {
-    "ember": "2.2.0"
   },
   "devDependencies": {
     "blanket": "~1.1.5"
