--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "ember-cli-blanket": "0.8.0",
     "ember-cli-bootstrap-sassy": "0.5.2",
     "ember-cli-dependency-checker": "^1.2.0",
+    "ember-cli-document-title": "0.3.0",
     "ember-cli-htmlbars": "^1.0.1",
     "ember-cli-htmlbars-inline-precompile": "^0.3.1",
     "ember-cli-inject-live-reload": "^1.3.1",
