--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "ember-cli": "2.3.0",
     "ember-cli-app-version": "^1.0.0",
     "ember-cli-babel": "^5.1.5",
-    "ember-cli-blanket": "0.8.0",
+    "ember-cli-blanket": "0.9.1",
     "ember-cli-bootstrap-sassy": "0.5.2",
     "ember-cli-dependency-checker": "^1.2.0",
     "ember-cli-document-title": "0.3.0",
@@ -41,6 +41,7 @@
     "ember-export-application-global": "^1.0.4",
     "ember-load-initializers": "^0.5.0",
     "ember-resolver": "^2.0.3",
-    "loader.js": "^4.0.0"
+    "loader.js": "^4.0.0",
+    "codeclimate-test-reporter": "^0.3.1"
   }
 }
