--- a/bower.json
+++ b/bower.json
@@ -3,8 +3,11 @@
   "dependencies": {
     "ember": "~2.3.1",
     "ember-cli-shims": "0.1.0",
-    "ember-cli-test-loader": "0.2.2",
     "ember-qunit-notifications": "0.1.0",
-    "bootstrap-sass": "^3.3.6"
+    "bootstrap-sass": "^3.3.6",
+    "loader.js": "^4.0.0"
+  },
+  "devDependencies": {
+    "blanket": "5e94fc30f2e694bb5c3718ddcbf60d467f4b4d26"
   }
 }
