--- a/bower.json
+++ b/bower.json
@@ -4,6 +4,7 @@
     "ember": "~2.3.1",
     "ember-cli-shims": "0.1.0",
     "ember-qunit-notifications": "0.1.0",
+    "ember-cli-test-loader": "0.2.2",
     "bootstrap-sass": "^3.3.6",
     "loader.js": "^4.0.0"
   },
